--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.7.0
   http: ^1.6.0
+  lottie: ^3.3.2
+  url_launcher: ^6.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/mariame food.png
+     - assets/animations/Frying Pan Breakfast.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
